--- a/src/app/pages/facture/modifierFacture/modifier-facture/modifier-facture.component.html
+++ b/src/app/pages/facture/modifierFacture/modifier-facture/modifier-facture.component.html
@@ -30,27 +30,41 @@
               </div>
             </div>
             <div class="row mt-2">
-              <div class="col-md-4">
-                <input type="number" placeholder="Prix" [(ngModel)]="prixP" class="form-control" id="prixP" name="prixP" step="0.01" required>
+              <div class="col-md-3">
+                <div class="input-group">
+                  <input type="number" placeholder="Prix" [(ngModel)]="prixP" class="form-control" id="prixP" name="prixP" step="0.01" required>
+                  <span class="input-group-text">TND</span>
+                </div>
                 <span class="text-danger col-md-12" *ngIf="prixErreur">
                   Le prix saisi n'est pas valide.
                 </span>
               </div>
               <div class="col-md-3">
-                <input type="number" placeholder="Quantité" [(ngModel)]="qunatiteP" class="form-control" id="qunatiteP" name="qunatiteP" required>
+                <div class="input-group">
+                  <input type="number" placeholder="Quantité" [(ngModel)]="qunatiteP" class="form-control" id="qunatiteP" name="qunatiteP" required>
+                  <span class="input-group-text">produits</span>
+                </div>
                 <span class="text-danger col-md-12" *ngIf="quantiteErreur">
                   Quantité saisi n'est pas valide.
                 </span>
               </div>
               <div class="col-md-3">
-                <input type="number" placeholder="Remise" [(ngModel)]="remiseP" class="form-control" id="remiseP" name="remiseP" step="0.01">
+                <div class="input-group">
+                  <input type="number" placeholder="Remise" [(ngModel)]="remiseP" class="form-control" id="remiseP" name="remiseP" step="0.01">
+                  <span class="input-group-text">%</span>
+                </div>
                 <span class="text-danger col-md-12" *ngIf="remiseErreur">
                   Remise saisi n'est pas valide.
                 </span>
               </div>
-              <div class="col-md-1">
-                <button type="submit" (click)="ajouter()" class="btn btn-primary">
+              <div class="col-md-3">
+                <span *ngIf="prixP != null">{{ ((prixP * qunatiteP) - ((prixP * qunatiteP * remiseP) / 100) | number: '1.3-3')  }} TND</span>
+                <button *ngIf="!loaderAdd" type="submit" (click)="ajouter()" class="btn btn-primary ms-3">
                   <i class="bi bi-plus"></i>
+                </button>
+                <button  *ngIf="loaderAdd" class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                  <span class="visually-hidden" role="status">Loading...</span>
                 </button>
               </div>
             </div>
@@ -142,47 +156,61 @@
   <button type="button" class="btn btn-success" routerLink="/facture"> <i class="bi bi-arrow-left-circle-fill"></i> Retour</button>
   <div class="container">
     <div class="row">
-      <div class="card container mt-2 mb-2 pb-2">
+      <div class="container card border-bottom mb-2 pb-2 pt-2 mt-2 border-primary">
         <h2>Ajouter un Produit</h2>
         <form class="row g-3">
           <div calss="col">
             <div>
               <div class="col-md-12">
-                <div class="col-md-5">
+                <div class="col-md-5 mb-2">
                   <div class="input-group">
-                    <input class="form-control" list="datalistOptions" id="exampleDataList1" name="codeP" (change)="afficher()" [(ngModel)]="codeP" placeholder="Recherche par code">
-                    <datalist id="datalistOptions1">
+                    <input class="form-control" list="datalistOptions" autocomplete="off" id="exampleDataList" name="codeP" (change)="afficher()" [(ngModel)]="codeP" placeholder="Recherche par code">
+                    <datalist id="datalistOptions">
                       <option *ngFor="let p of listProduit" [value]="p.code">{{p.code}}</option>
                     </datalist>
                   </div>
                 </div>
-                <div class="text-danger col-md-12 mt-1" *ngIf="searchErreur">
+                <div class="text-danger col-md-12" *ngIf="searchErreur">
                   Le produit n'a pas été trouvé.
                 </div>
               </div>
             </div>
             <div class="row mt-2">
-              <div class="col-md-4  mt-1">
-                <input type="number" placeholder="Prix" [(ngModel)]="prixP" class="form-control" id="prixP1" name="prixP" step="0.01" required>
+              <div class="col-md-3 mb-2">
+                <div class="input-group">
+                  <input type="number" placeholder="Prix" [(ngModel)]="prixP" class="form-control" id="prixP" name="prixP" step="0.01" required>
+                  <span class="input-group-text">TND</span>
+                </div>
                 <span class="text-danger col-md-12" *ngIf="prixErreur">
                   Le prix saisi n'est pas valide.
                 </span>
               </div>
-              <div class="col-md-3  mt-1">
-                <input type="number" placeholder="Quantité" [(ngModel)]="qunatiteP" class="form-control" id="qunatiteP1" name="qunatiteP" required>
+              <div class="col-md-3 mb-2">
+                <div class="input-group">
+                  <input type="number" placeholder="Quantité" [(ngModel)]="qunatiteP" class="form-control" id="qunatiteP" name="qunatiteP" required>
+                  <span class="input-group-text">produits</span>
+                </div>
                 <span class="text-danger col-md-12" *ngIf="quantiteErreur">
                   Quantité saisi n'est pas valide.
                 </span>
               </div>
-              <div class="col-md-3  mt-1">
-                <input type="number" placeholder="Remise" [(ngModel)]="remiseP" class="form-control" id="remiseP1" name="remiseP" step="0.01">
+              <div class="col-md-3 mb-2">
+                <div class="input-group">
+                  <input type="number" placeholder="Remise" [(ngModel)]="remiseP" class="form-control" id="remiseP" name="remiseP" step="0.01">
+                  <span class="input-group-text">%</span>
+                </div>
                 <span class="text-danger col-md-12" *ngIf="remiseErreur">
                   Remise saisi n'est pas valide.
                 </span>
               </div>
-              <div class="mt-1">
-                <button type="submit" (click)="ajouter()" class="btn btn-primary">
+              <div class="col-md-3">
+                <span *ngIf="prixP != null">{{ ((prixP * qunatiteP) - ((prixP * qunatiteP * remiseP) / 100) | number: '1.3-3')  }} TND</span>
+                <button *ngIf="!loaderAdd" type="submit" (click)="ajouter()" class="btn btn-primary ms-3">
                   <i class="bi bi-plus"></i>
+                </button>
+                <button  *ngIf="loaderAdd" class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                  <span class="visually-hidden" role="status">Loading...</span>
                 </button>
               </div>
             </div>
