--- a/src/app/pages/devis/ajouter-devis/ajouter-devis.component.html
+++ b/src/app/pages/devis/ajouter-devis/ajouter-devis.component.html
@@ -8,10 +8,11 @@
         <div class="card-header text-center">
           Informations du client
         </div>
-        <div class="card-body">
+        <div class="card-body" *ngIf="!isClientDivLoader">
           <div class="mb-3">
             <label>Sélectionnez une client</label>
             <select
+              ng-disabled="isDropdownDisabled"
               class="form-control"
               id="client"
               name="client"
@@ -39,66 +40,82 @@
             </div>
           </form>
         </div>
+
+        <!-- Div du loader -->
+        <div class="d-flex justify-content-center p-5" *ngIf="isClientDivLoader">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Chargement...</span>
+          </div>
+        </div>
+
       </div>
       <div class="card">
-        <div class="card-header">Date Facture</div>
+        <div class="card-header">Date devis </div>
         <div class="card-body"><input type="date" class="form-control" [(ngModel)]="devis.dateDevis"></div>
       </div>
     </div>
     <div class="col-md-6">
-      <div class="card mb-5">
+      <div class="card mb-5"  *ngIf="!isProduitDivLoader">
         <div class="card-header text-center">
           Ajouter un produit
         </div>
         <div class="card-body">
           <div class="">
             <div class="col mb-2">
-              <input type="text" class="form-control"
-                     placeholder="Code Produit"
-                     [(ngModel)]="codeProduit"
-                     (input)="search()"
-              >
-              <div *ngIf="codeProduit.length && produitSelectedYet == true" class="card p-2">
-                <p class="cursor-pointer"
-                   *ngFor="let p of listProduitFiltrer"
-                   (click)="selectPrdotui(p)"
-                >{{p.code}}</p>
+              <div class="input-group">
+                <input class="form-control" autocomplete="off" list="datalistOptions" id="exampleDataList" name="codeP" (change)="afficher()" [(ngModel)]="codeProduit" placeholder="Recherche par code">
+                <datalist id="datalistOptions">
+                  <option *ngFor="let p of listProduit" [value]="p.code">{{p.code}}</option>
+                </datalist>
               </div>
             </div>
             <span class="text-danger" *ngIf="errorProduit == true">Veuillez choisir un produit</span>
-            <div class="col mb-2">
-              <input type="text" class="form-control"
-                     placeholder="Quantité"
-                     [(ngModel)]="quantite"
-              >
+            <span *ngIf="clientErreur" class="text-danger">
+              Veuillez choisir un client avant d'ajouter un produit.
+            </span>
+            <div class="text-danger col-md-12" *ngIf="searchErreur">
+              Le produit n'a pas été trouvé.
+            </div>
+            <div class="mb-2">
+              <div class="input-group">
+                <input type="number" class="form-control" placeholder="Quantité" [(ngModel)]="quantite">
+                <span class="input-group-text">produits</span>
+              </div>
             </div>
             <span class="text-danger" *ngIf="errorQnt == true">La quantité doit être supérieure à zéro.</span>
             <div class="col mb-2 mb-2">
-              <input type="text" class="form-control"
-                     placeholder="Prix Unitaire"
-                     [(ngModel)]="prixUtitaire"
-
-              >
+              <div class="input-group">
+                <input type="number" class="form-control" placeholder="Prix Unitaire" [(ngModel)]="prixUtitaire">
+                <span class="input-group-text">TND</span>
+              </div>
             </div>
             <div class="col mb-2">
-              <input  type="text" class="form-control"
-                      placeholder="Remise"
-                      [(ngModel)]="remise"
-
-              >
+              <div class="input-group">
+                <input type="number" class="form-control" placeholder="Remise" [(ngModel)]="remise">
+                <span class="input-group-text">%</span>
+              </div>
             </div>
             <div class="col mb-2">
-              <span *ngIf="searchProduit.etatRemise == true" >Prix Totale : {{ quantite !== 0 ? ((searchProduit.prix! * quantite)-((searchProduit.prix! * quantite)*(remise!/100)) | number:'1.3-3'): (searchProduit.prix! * 1)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3' }}</span>
-              <span *ngIf="searchProduit.etatRemise == false" >Prix Totale : {{ (quantite !== 0 ? searchProduit.prix! * quantite:0) | number:'1.3-3' }}</span>
-
+              <span>{{ ((prixUtitaire * quantite) - ((prixUtitaire * quantite * remise) / 100) | number: '1.3-3')  }} TND</span>
             </div>
             <div class="col mb-2">
-              <button class="btn btn-success" (click)="ajouterProduitFacture()"><i class="bi bi-plus-circle-fill"></i></button>
+              <button class="btn btn-success" (click)="ajouterProduitDevis()"><i class="bi bi-plus-circle-fill"></i></button>
             </div>
           </div>
         </div>
       </div>
+      <!-- Div du loader -->
+      <div class="card d-flex justify-content-center p-5" *ngIf="isProduitDivLoader">
+        <div class="card-header text-center">
+          Ajouter un produit
+        </div>
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden">Chargement...</span>
+        </div>
+      </div>
     </div>
+
+
   </div>
 
   <!-- Client information column -->
@@ -120,7 +137,7 @@
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let p of listeProduitFacture">
+          <tr *ngFor="let p of listeProduitDevis">
             <td scope="row">{{p.produit!.code}}</td>
             <td>{{p.quantite}}</td>
             <td>{{p.prixUnitaire | number:'1.3-3'}} TND</td>
@@ -134,7 +151,7 @@
     </div>
     <div class="d-block d-md-none card p-2">
       <h2 class="card-title">La liste des produits facturés</h2>
-      <div *ngFor="let p of listeProduitFacture" class="row border-top border-secondary border-1 rounded pt-2">
+      <div *ngFor="let p of listeProduitDevis" class="row border-top border-secondary border-1 rounded pt-2">
         <div class="col-6">
           <p><b>Code : </b>{{p.produit!.code}}</p>
         </div>
@@ -184,7 +201,13 @@
                 Non payé
               </label>
             </div>
-            <button (click)="save()" class="btn btn-primary">Enregistrée</button>
+            <button class="btn btn-primary" type="submit" (click)="save()" [disabled]="isButtonLoading">
+              <span *ngIf="!isButtonLoading">Enregistrée</span>
+              <div  *ngIf="isButtonLoading">
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                Chargement...
+              </div>
+            </button>
           </div>
         </div>
       </div>
