--- a/src/app/pages/statistique/statistique.component.html
+++ b/src/app/pages/statistique/statistique.component.html
@@ -1,4 +1,4 @@
-<section class="section dashboard">
+<section class="section dashboard d-none d-md-block">
 <div class="row">
   <div class="col-xxl-4 col-xl-12">
     <div class="card info-card customers-card">
@@ -217,4 +217,7 @@
       </div>
     </div>
   </div>
+</section>
+<section class="section d-block d-md-none">
+<app-index-mobile></app-index-mobile>
 </section>
