ajouter bon de livraison/mailing/whatsapp

--- a/src/app/pages/client/modifier-client/modifier-client.component.html
+++ b/src/app/pages/client/modifier-client/modifier-client.component.html
@@ -20,6 +20,10 @@
     <input type="text" class="form-control" id="nomCommercial" placeholder="Entrez Nom Commercial" name="nomCommercial" [(ngModel)]="client.nomCommercial">
   </div>
   <div class="form-group mb-3">
+    <label for="email">Email</label>
+    <input type="email" class="form-control" id="email" placeholder="Entrez Email" name="email" [(ngModel)]="client.email">
+  </div>
+  <div class="form-group mb-3">
     <label for="code">Code</label>
     <input type="text" class="form-control" id="code" placeholder="Entrez code" name="code" [(ngModel)]="client.code">
   </div>
