--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -88,6 +88,32 @@
       </tbody>
     </div>
   </div>
+  <nav *ngIf="pageClient" aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item" [class.disabled]="currentPage === 0">
+        <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage - 1, pageSize: pageSize})" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only"></span>
+        </a>
+      </li>
+
+      <ng-container *ngFor="let i of pageNumbers()">
+        <li class="page-item" [class.active]="currentPage === i" *ngIf="i < 5 || i >= pageClient.totalPages! - 2 || Math.abs(i - currentPage) < 2">
+          <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: i, pageSize: pageSize})">{{i + 1}}</a>
+        </li>
+        <li class="page-item disabled" *ngIf="i === currentPage+3 && currentPage + 3 < pageClient.totalPages!">
+          <a class="page-link">...</a>
+        </li>
+      </ng-container>
+
+      <li class="page-item" [class.disabled]="currentPage === (pageClient.totalPages ?? 0) - 1">
+        <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage + 1, pageSize: pageSize})" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only"></span>
+        </a>
+      </li>
+    </ul>
+  </nav>
   </div>
 
 
