--- a/src/app/pages/devis/details-devis/details-devis.component.html
+++ b/src/app/pages/devis/details-devis/details-devis.component.html
@@ -43,8 +43,7 @@
               <td>{{f.produit!.description}}</td>
               <td>{{f.quantite}}</td>
               <td>{{f.prixUnitaire | number:'1.3-3' }} TND</td>
-              <td *ngIf="f.produit!.etatRemise">{{f.remise}}%</td>
-              <td *ngIf="!f.produit!.etatRemise">0%</td>
+              <td>{{f.remise}}%</td>
               <td>{{f.prixTotal | number:'1.3-3' }} TND</td>
             </tr>
             </tbody>
@@ -116,8 +115,7 @@
             </div>
             <div class="col-6">
               <p>
-                <b>Remise : </b><span *ngIf="f.produit!.etatRemise">{{f.remise}}%</span>
-                <span *ngIf="!f.produit!.etatRemise">0%</span>
+                <b>Remise : </b><span>{{f.remise}}%</span>
               </p>
             </div>
             <div class="col-6">
