--- a/src/app/pages/devis/devis.component.html
+++ b/src/app/pages/devis/devis.component.html
@@ -281,7 +281,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <h1 class="text-center text-primary p-2 title-underline"><u>Liste des factures</u></h1>
+          <h1 class="text-center text-primary p-2 title-underline"><u>Liste des devis</u></h1>
           <b>Sélectionner tout : <input class="form-check-input" type="checkbox" [checked]="ids.length==page.totalElements"></b>
         </div>
       </div>
@@ -332,7 +332,7 @@
       <li class="page-item" [class.disabled]="currentPage === 0">
         <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage - 1, pageSize: pageSize})" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
+          <span class="sr-only"></span>
         </a>
       </li>
 
@@ -348,7 +348,7 @@
       <li class="page-item" [class.disabled]="currentPage === (page.totalPages ?? 0) - 1">
         <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage + 1, pageSize: pageSize})" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only"></span>
         </a>
       </li>
     </ul>
