--- a/src/app/pages/produit/produit.component.html
+++ b/src/app/pages/produit/produit.component.html
@@ -190,7 +190,7 @@
       <li class="page-item" [class.disabled]="currentPage === 0">
         <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage - 1, pageSize: pageSize})" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
+          <span class="sr-only"></span>
         </a>
       </li>
 
@@ -206,7 +206,7 @@
       <li class="page-item" [class.disabled]="currentPage === (page.totalPages ?? 0) - 1">
         <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage + 1, pageSize: pageSize})" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only"></span>
         </a>
       </li>
     </ul>
